monitoring/grafana/ingress.yaml
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    helm.sh/chart: grafana-6.48.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/version: "9.3.1"
    app.kubernetes.io/managed-by: Helm
    cert-manager.io/issuer: "issuer"
    cert-manager.io/common-name: "grafana.dev.local"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
